--- a/External-Code/index.css
+++ b/External-Code/index.css
@@ -18,7 +18,7 @@
 
 /* Introduction Section */
 .introduction-section-context {
-    padding: 0% 10%;
+    padding: 10% 10%;
 }
 
 .helper-bot-heading {
@@ -36,5 +36,44 @@
     margin-top: -14.5%;
     width: 50rem;
     float: right;
+      position: absolute;
     margin-right: -10%;
+}
+
+.info-section{
+  background-color: #3a3f44;
+  color: #ffffff;
+}
+
+.info-helper-bot{
+  width: 10rem;
+  margin: 2rem 2rem auto 10rem;
+  disp;lay: inline-block;
+}
+
+.info-section-nav{
+  float: right;
+  /* padding: 2rem; */
+  margin-top: 5rem;
+  font-size: 1.5rem;
+}
+
+.info-section-heading{
+  text-align: center;
+  font-size: 3rem;
+  margin-top: 0;
+  /* margin-left: 20rem; */
+}
+
+.info-section-images{
+  background-color: #A9A9A9;
+  border-radius: 100%;
+  width: 50%;
+  height: 70%;
+  align-self: center;
+}
+
+.info-section-card{
+  background-color: #3a3f44;
+  border-color: #3a3f44;
 }
